--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <!-- reset.css destyle -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@1.0.15/destyle.css"/>
     <title>Document</title>
 </head>
 <body>
@@ -25,5 +27,100 @@
     </div>
 </article>
 
+<article id="main_after" class="ly_cont">
+    <div class="bl_media">
+        <figure class="bl_media_imagewrapper">
+            <img src="./img/menu_1.jpg" alt="兎の干菓子">
+        </figure>
+        <div class="bl_media_body">
+            <h2 class="bl_media_title">ユーザーを考えた設計で満足な体験を</h2>
+            <p>天の川のなかでたった一つの小さな星に見えるのでした。ジョバンニは、お辞儀をして言おうとした桔梗いろのつめたそうな天をも焦がしそうでした。
+            町かどを曲がるとき、ふりかえって見ていると、そうおまえたちは思っているけれども、そこは小さな林や牧場やらある野原のように見えるのです。
+            </p>
+            <h3 class="subTitle">ペルソナとは？</h3>
+            <span>天の川のなかでたった一つの小さな星に見えるのでした。ジョバンニは、お辞儀をして言おうとした桔梗いろのつめたそうな天をも焦がしそうでした。</span>
+        </div>
+    </div>
+</article>
+
+<div class="card card__margin--80">
+    <figure class="card__img-wrapper">
+        <img class="card__img" alt="梅の花" src="/img/menu_2.jpg">
+    </figure>
+    <div class="card__body">
+        <h3 class="card__title">
+        webサイト制作
+        </h3>
+        <p class="card__text">
+        ユーザーにベストな体験を提供するクリエイティブとテクノロジーを作り上げます。
+        </p>
+    </div>
+    <!-- /.card__body -->
+</div>
+<!-- /.card -->
+
+
+<div class="cards cards--col3">
+    <div class="cards__item card">
+        <figure class="card__img-wrapper">
+            <img class="card__img" alt="" src="/img/menu_1.jpg">
+        </figure>
+        <div class="card__body">
+            <h3 class="card__title">
+            webサイト制作
+            </h3>
+            <p class="card__text">
+            ユーザーにベストな体験を提供するクリエイティブとテクノロジーを作り上げます。
+            </p>
+        </div>
+    <!-- /.card__body -->
+    </div>
+    <!-- /.cards__item card -->
+    <div class="cards__item card">
+        <figure class="card__img-wrapper">
+            <img class="card__img" alt="" src="/img/menu_2.jpg">
+        </figure>
+        <div class="card__body">
+            <h3 class="card__title">
+                デジタルマーケティング支援
+            </h3>
+            <p class="card__text">
+                自社のマーケティングを支える最適なデジタルマーケティングツールの導入をサポートします。
+            </p>
+        </div>
+    <!-- /.card__body -->
+    </div>
+    <!-- /.cards__item card -->
+    <div class="cards__item card">
+        <figure class="card__img-wrapper">
+            <img class="card__img" alt="" src="/img/menu_3.jpg">
+        </figure>
+        <div class="card__body">
+            <h3 class="card__title">
+                解析・レポーティング
+            </h3>
+            <p class="card__text">
+                ユーザー行動を分析し、より良いサイトを作り上げるためのアイデアをご提案します。
+            </p>
+        </div>
+    <!-- /.card__body -->
+    </div>
+    <!-- /.cards__item card -->
+    <div class="cards__item card">
+        <figure class="card__img-wrapper">
+            <img class="card__img" alt="" src="/img/menu_1.jpg">
+        </figure>
+        <div class="card__body">
+            <h3 class="card__title">
+            webサイト制作
+            </h3>
+            <p class="card__text">
+            ユーザーにベストな体験を提供するクリエイティブとテクノロジーを作り上げます。
+            </p>
+        </div>
+    <!-- /.card__body -->
+    </div>
+</div>
+<!-- /.cards cards--col3 -->
 </body>
 </html>
