--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <div class="card card__margin--80">
     <figure class="card__img-wrapper">
-        <img class="card__img" alt="梅の花" src="/img/menu_2.jpg">
+        <img class="card__img" alt="梅の花" src="./img/menu_2.jpg">
     </figure>
     <div class="card__body">
         <h3 class="card__title">
@@ -63,7 +63,7 @@
 <div class="cards cards--col3">
     <div class="cards__item card">
         <figure class="card__img-wrapper">
-            <img class="card__img" alt="" src="/img/menu_1.jpg">
+            <img class="card__img" alt="" src="./img/menu_1.jpg">
         </figure>
         <div class="card__body">
             <h3 class="card__title">
@@ -78,7 +78,7 @@
     <!-- /.cards__item card -->
     <div class="cards__item card">
         <figure class="card__img-wrapper">
-            <img class="card__img" alt="" src="/img/menu_2.jpg">
+            <img class="card__img" alt="" src="./img/menu_2.jpg">
         </figure>
         <div class="card__body">
             <h3 class="card__title">
@@ -93,7 +93,7 @@
     <!-- /.cards__item card -->
     <div class="cards__item card">
         <figure class="card__img-wrapper">
-            <img class="card__img" alt="" src="/img/menu_3.jpg">
+            <img class="card__img" alt="" src="./img/menu_3.jpg">
         </figure>
         <div class="card__body">
             <h3 class="card__title">
@@ -108,7 +108,7 @@
     <!-- /.cards__item card -->
     <div class="cards__item card">
         <figure class="card__img-wrapper">
-            <img class="card__img" alt="" src="/img/menu_1.jpg">
+            <img class="card__img" alt="" src="./img/menu_1.jpg">
         </figure>
         <div class="card__body">
             <h3 class="card__title">
